syntax = "proto3";

package pb;

option go_package = "internal/pb";

message CreateOrderRequest {
  double price = 1;
  double tax = 2;
}

message CreateOrderResponse {
  string id = 1;
  double price = 2;
  double tax = 3;
  double final_price = 4;
}

message ListOrdersRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message Order {
  string id = 1;
  double price = 2;
  double tax = 3;
  double final_price = 4;
}

message ListOrdersResponse {
  repeated Order orders = 1;
}

service OrderService {
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse) {}
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
}